--- a/.travis.yml
+++ b/.travis.yml
@@ -11,14 +11,14 @@ env:
 
 script:
 - docker --version
-- docker build -t ${DOCKER_IMAGE}:${TRAVIS_TAG} .
+- docker build -t ${DOCKER_IMAGE}:${TRAVIS_BUILD_ID} .
 
 deploy:
   provider: script
   script: |
     echo ${DOCKER_HUB_PASSWORD} | docker login -u ${DOCKER_HUB_USER} --password-stdin
-    docker tag ${DOCKER_IMAGE}:${TRAVIS_TAG} ${DOCKER_IMAGE}:latest
-    docker push ${DOCKER_IMAGE}:${TRAVIS_TAG}
+    docker tag ${DOCKER_IMAGE}:${TRAVIS_BUILD_ID} ${DOCKER_IMAGE}:latest
+    docker push ${DOCKER_IMAGE}:${TRAVIS_BUILD_ID}
     docker push ${DOCKER_IMAGE}:latest
   on:
     branch: master
