Configure build and deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,17 +11,14 @@ env:
 
 script:
 - docker --version
-- docker build -t ${DOCKER_IMAGE}:${TRAVIS_BUILD_ID} .
+- docker build -t ${DOCKER_IMAGE}:${TRAVIS_JOB_ID} .
 
 deploy:
   provider: script
   script: |
-    echo ${DOCKER_HUB_PASSWORD} | docker login -u ${DOCKER_HUB_USER} --password-stdin
-
-    docker tag ${DOCKER_IMAGE}:${TRAVIS_BUILD_ID} ${DOCKER_IMAGE}:latest
-
-    docker push ${DOCKER_IMAGE}:${TRAVIS_BUILD_ID}
-    
-    docker push ${DOCKER_IMAGE}:latest
+    echo ${DOCKER_HUB_PASSWORD} | docker login -u ${DOCKER_HUB_USER} --password-stdin\n
+    docker tag ${DOCKER_IMAGE}:${TRAVIS_JOB_ID} ${DOCKER_IMAGE}:latest\n
+    docker push ${DOCKER_IMAGE}:${TRAVIS_JOB_ID}\n
+    docker push ${DOCKER_IMAGE}:latest\n
   on:
     branch: master
