--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,6 @@ script:
 
 deploy:
   provider: script
-  script: |
-    echo ${DOCKER_HUB_PASSWORD} | docker login -u ${DOCKER_HUB_USER} --password-stdin &&
-    docker tag ${DOCKER_IMAGE}:${TRAVIS_JOB_ID} ${DOCKER_IMAGE}:latest &&
-    docker push ${DOCKER_IMAGE}:${TRAVIS_JOB_ID} &&
-    docker push ${DOCKER_IMAGE}:latest
+  script: echo ${DOCKER_HUB_PASSWORD} | docker login -u ${DOCKER_HUB_USER} --password-stdin && docker tag ${DOCKER_IMAGE}:${TRAVIS_JOB_ID} ${DOCKER_IMAGE}:latest && docker push ${DOCKER_IMAGE}:${TRAVIS_JOB_ID} && docker push ${DOCKER_IMAGE}:latest
   on:
     branch: master
