--- a/5/stretch/Dockerfile
+++ b/5/stretch/Dockerfile
@@ -10,8 +10,8 @@ MAINTAINER Marcos Vallim <tischer@gmail.com>
 
 RUN apt-get update && \
     apt-get install -y apt-transport-https gnupg2 dirmngr && \
-    apt-key adv --fetch-keys https://download.gluster.org/pub/gluster/glusterfs/4.1/rsa.pub && \
-    echo 'deb https://download.gluster.org/pub/gluster/glusterfs/4.1/LATEST/Debian/9/amd64/apt/ stretch main' > /etc/apt/sources.list.d/gluster.list && \
+    apt-key adv --fetch-keys https://download.gluster.org/pub/gluster/glusterfs/5/rsa.pub && \
+    echo 'deb https://download.gluster.org/pub/gluster/glusterfs/5/LATEST/Debian/9/amd64/apt/ stretch main' > /etc/apt/sources.list.d/gluster.list && \
     apt-get update && apt-get install -y glusterfs-server && apt-get clean
 
 EXPOSE 24007-24008 24009-24109 49152-49252 38465-38467 111 2049
