--- a/6/buster/Dockerfile.server
+++ b/6/buster/Dockerfile.server
@@ -1,4 +1,4 @@
-FROM debian:stretch-slim
+FROM debian:buster-slim
 
 ENV GLUSTERD_OPTIONS=""
 
@@ -6,12 +6,13 @@ ENV LOG_LEVEL="INFO"
 
 ARG DEBIAN_FRONTEND=noninteractive
 
-MAINTAINER Marcos Vallim <tischer@gmail.com>
+LABEL maintainer Marcos Vallim <tischer@gmail.com>
+LABEL description="GlusterFS Server"
 
 RUN apt-get update && \
     apt-get install -y apt-transport-https ca-certificates gnupg2 dirmngr netcat procps && \
     apt-key adv --fetch-keys https://download.gluster.org/pub/gluster/glusterfs/6/rsa.pub && \
-    echo 'deb https://download.gluster.org/pub/gluster/glusterfs/6/LATEST/Debian/9/amd64/apt/ stretch main' > /etc/apt/sources.list.d/gluster.list && \
+    echo 'deb https://download.gluster.org/pub/gluster/glusterfs/6/LATEST/Debian/10/amd64/apt/ buster main' > /etc/apt/sources.list.d/gluster.list && \
     apt-get update && apt-get install -y glusterfs-server && apt-get clean
 
 EXPOSE 24007-24008 24009-24109 49152-49252 38465-38467 111 2049
