--- a/7/stretch/Dockerfile client
+++ b/7/stretch/Dockerfile client
@@ -6,14 +6,11 @@ ENV LOG_LEVEL="INFO"
 
 ARG DEBIAN_FRONTEND=noninteractive
 
-MAINTAINER Marcos Vallim <tischer@gmail.com>
+LABEL maintainer Marcos Vallim <tischer@gmail.com>
+LABEL description="GlusterFS Client"
 
 RUN apt-get update && \
     apt-get install -y apt-transport-https ca-certificates gnupg2 dirmngr netcat procps && \
     apt-key adv --fetch-keys https://download.gluster.org/pub/gluster/glusterfs/7/rsa.pub && \
     echo 'deb https://download.gluster.org/pub/gluster/glusterfs/7/LATEST/Debian/9/amd64/apt/ stretch main' > /etc/apt/sources.list.d/gluster.list && \
-    apt-get update && apt-get install -y glusterfs-server && apt-get clean
-
-EXPOSE 24007-24008 24009-24109 49152-49252 38465-38467 111 2049
-
-ENTRYPOINT /usr/sbin/glusterd -N -p /var/run/glusterd.pid --log-level ${LOG_LEVEL} ${GLUSTERD_OPTIONS}
+    apt-get update && apt-get install -y glusterfs-client && apt-get clean
