--- a/4.1/buster/Dockerfile.server
+++ b/4.1/buster/Dockerfile.server
@@ -7,6 +7,7 @@ ENV LOG_LEVEL="INFO"
 ARG DEBIAN_FRONTEND=noninteractive
 
 LABEL maintainer Marcos Vallim <tischer@gmail.com>
+LABEL description="GlusterFS Server"
 
 RUN apt-get update && \
     apt-get install -y apt-transport-https ca-certificates gnupg2 dirmngr netcat procps && \
